fix spring data dependency, change java version to 8