@@ -1,12 +1,12 @@
 package com.metalabs.cephei.web.controllers;
 
 import com.metalabs.cephei.web.model.PseudoBot;
-import com.metalabs.cephei.web.repository.PseudoBotRepository;
 import com.metalabs.cephei.web.service.PseudoBotService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.Arrays;
 import java.util.List;
 
 @RestController
@@ -16,19 +16,19 @@ public class Example {
     private PseudoBotService pseudoBotService;
 
     @RequestMapping("/hello")
-    String home() {
+    String example() {
         return "Hello world";
     }
 
 
     @RequestMapping("/example")
-    List<Item> home2() {
-        List<Item> items = List.of(new Item(12, "Vasay"), new Item(13, "Petya"));
+    List<Item> example2() {
+        List<Item> items = Arrays.asList(new Item(12, "Vasay"), new Item(13, "Petya"));
         return items;
     }
 
     @RequestMapping("/pseudobot")
-    List<PseudoBot> home3() {
+    List<PseudoBot> example3() {
         return pseudoBotService.findAll();
     }
 
